--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=Coordinater
-spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
-spring.datasource.name=CoordinaterForEngineers
+spring.datasource.url=jdbc:postgresql://localhost:5432/Coordinator
+spring.datasource.username=postgres
+spring.datasource.password=121314
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
