--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password=121314
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.jdbc.core=DEBUG
+spring.sql.init.mode=always
+
+logging.level.org.springframework.jdbc.core.JdbcTemplate=TRACE
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
